--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>ဆရာ ဒဂုန်ရောင် မွေးနေ့ဂုဏ်ပြု & ဆုတောင်း</title>
+<title>မွေးနေ့ဂုဏ်ပြုအမှတ်တရ</title>
 <style>
   body {
     font-family: 'Noto Sans Myanmar', serif;
@@ -124,9 +124,9 @@
 
 <p>ဆရာဒဂုန်ရောင် ...... အခုဆိုရင် ရှင်သန်ရခြင်းရဲ့အဓိပ္ပါယ်ကို ပိုနက်ရှိုင်းစွာ ရှာဖွေရင်း ရယ်မောပျော်ရွှင်စွာ ဘဝကိုဖြတ်သန်းနိုင်နေပါပြီ။</p>
 
-<p>ဘဝမှာ ကြုံခဲ့သမျှ ဒုက္ခဟူသမျှ၊ ဟာသလုပ်၊ ပြောင်သရော်ကာ ကိုယ်တိုင် အရက်နဲ့မြည်း၊ ဒုက္ခကောင်ကို အရွဲ့ ​ပြန်တိုက်ပြီး</p>
+<p>ဘဝမှာ ကြုံခဲ့သမျှ ဒုက္ခဟူသမျှ၊ ဟာသလုပ်၊ ပြောင်သရော်ကာ ကိုယ်တိုင် အရက်နဲ့မြည်း၊ ဒုက္ခဆိုတဲ့ကောင်ကို အရက်နဲ့အရွဲ့ ​ပြန်တိုက်ပြီး</p>
 
-<p>လောကဒဏ်မုန်တိုင်း အလီလီကို အကြိမ်ကြိမ်ကျော်လွန်ပြီးတဲ့ မိသားစုရဲ့ မာလိန်မှုူး <strong>"ဒဂုန်ရောင်"</strong> မွေးနေ့မှစ အရက်တွေ ငွေလိုပေါပါစေ။ ငွေတွေရေ​လိုပေါပါစေ။ တ၍မလိုသောလူ ဖြစ်နိုင်ပါစေကြောင်း မွေးနေ့ဆုမွန်ကောင်း တောင်းပေးလိုက်ပါသည်။</p>
+<p>လောကဒဏ် မုန်တိုင်း လှိုင်းအလီလီကို အကြိမ်ကြိမ်ကျော်လွန်ပြီးတဲ့ မိသားစုရဲ့ မာလိန်မှုူး <strong>"ဒဂုန်ရောင်"</strong> မွေးနေ့မှစ အရက်တွေ ငွေလိုပေါပါစေ။ ငွေတွေရေ​လိုပေါပါစေ။ တ၍မလိုသောလူ ဖြစ်နိုင်ပါစေကြောင်း မွေးနေ့ဆုမွန်ကောင်း တောင်းပေးလိုက်ပါသည်။</p>
 
 <section class="portrait" aria-hidden="true">
   <!-- သင့်ဓာတ်ပုံ URL ထည့်ပါ -->
@@ -136,10 +136,10 @@
 <div class="marquee-container" aria-label="ဆုတောင်း စာလုံးပြေး">
   <div class="marquee" role="marquee" aria-live="off">
 <div class="marquee-text" id="marqueeText">
-      ဆုတောင်းများကို စိတ်အားထက်သန်စွာ ပေးပို့ကြသောမိတ်ဆွေများ ~ &nbsp;&nbsp;
+      ဆုတောင်းများကို ပေးပို့လိုကြသောမိတ်ဆွေများ ~ &nbsp;&nbsp;
       ကျေးဇူးအထူးတင်ပါသည် ~ &nbsp;&nbsp;
-      ဆရာ ဒဂုန်ရောင်နှင့် ~ &nbsp;&nbsp;
-      ဆုတောင်းများကို စိတ်အားထက်သန်စွာပေးပို့ကြသောမိတ်ဆွေများ ~
+      ဆရာ ဒဂုန်ရောင်ဆီ~ &nbsp;&nbsp;
+      ဆုတောင်းများကို ပေးပို့လိုကြသောမိတ်ဆွေများအတွက် လွယ်ကူစွာရေးခဲ့နိုင်ပါတယ်။ ~
     </div>
   </div>
 </div>
