--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>မွေးနေ့ဂုဏ်ပြုအမှတ်တရ</title>
+<title>ေမြးေန႕ဂုဏ္ျပဳအမွတ္တရ</title>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Myanmar&display=swap" rel="stylesheet" />
 <style>
   body {
     font-family: 'Noto Sans Myanmar', serif;
@@ -115,90 +116,59 @@
     text-align: center;
     display: none;
   }
+  /* Buttons for contact links */
+  .contact-links {
+    text-align: center;
+    margin-top: 2rem;
+  }
+  .contact-links .btn {
+    display: inline-block;
+    background: #FFD700;
+    color: #000;
+    font-weight: 700;
+    padding: 0.6rem 1.2rem;
+    margin: 0.5rem;
+    border-radius: 10px;
+    text-decoration: none;
+    box-shadow: 0 4px 10px rgba(255,215,0,0.4);
+    transition: background-color 0.2s ease;
+    font-family: 'Noto Sans Myanmar', serif;
+  }
+  .contact-links .btn:hover {
+    background-color: #ccac00;
+  }
 </style>
 </head>
 <body>
 
-<h1>ဆရာ ဒဂုန်ရောင် မွေးနေ့ဂုဏ်ပြု</h1>
-<h2>၁၃-၈-၂၀၂၅ ကမ္ဘာမြေပေါ် ရောက်ရှိခြင်း နှစ်ပတ်လည် အထိမ်းအမှတ်</h2>
+<h1>ဆရာ ဒဂုန္ေရာင္ ေမြးေန႕ဂုဏ္ျပဳ</h1>
+<h2>၁၃-၈-၂၀၂၅ ကမၻာေျမေပၚ ေရာက္ရွိျခင္း ႏွစ္ပတ္လည္ အထိမ္းအမွတ္</h2>
 
-<p>ဆရာဒဂုန်ရောင် ...... အခုဆိုရင် ရှင်သန်ရခြင်းရဲ့အဓိပ္ပါယ်ကို ပိုနက်ရှိုင်းစွာ ရှာဖွေရင်း ရယ်မောပျော်ရွှင်စွာ ဘဝကိုဖြတ်သန်းနိုင်နေပါပြီ။</p>
+<p>ဆရာဒဂုန္ေရာင္ ...... အခုဆိုရင္ ရှင်သန်ရခြင်းရဲ့အဓိပ္ပါယ်ကို ပိုနက္ရွိုင္းစြာ ရွာေဖြရင္း ရယ္ေမာေပ်ာ္႐ႊင္စြာ ဘဝကိုျဖတ္သန္းနိုင္ေနပါၿပီ။</p>
 
-<p>ဘဝမှာ ကြုံခဲ့သမျှ ဒုက္ခဟူသမျှ၊ ဟာသလုပ်၊ ပြောင်သရော်ကာ ကိုယ်တိုင် အရက်နဲ့မြည်း၊ ဒုက္ခဆိုတဲ့ကောင်ကို အရက်နဲ့အရွဲ့ ​ပြန်တိုက်ပြီး</p>
+<p>ဘဝမွာ ႀကဳံခဲ့သမွ် ဒုကၡဟူသမွ်၊ ဟာသလုပ္၊ ေျပာင္သေရာ္ကာ ကိုယ္တိုင္ အရက္နဲ႕ျမည္း၊ ဒုကၡဆိုတဲ့ေကာင္ကို အရက္နဲ႕အ႐ြဲ႕ ျပန္တိုက္ၿပီး</p>
 
-<p>လောကဒဏ် မုန်တိုင်း လှိုင်းအလီလီကို အကြိမ်ကြိမ်ကျော်လွန်ပြီးတဲ့ မိသားစုရဲ့ မာလိန်မှုူး <strong>"ဒဂုန်ရောင်"</strong> မွေးနေ့မှစ အရက်တွေ ငွေလိုပေါပါစေ။ ငွေတွေရေ​လိုပေါပါစေ။ တ၍မလိုသောလူ ဖြစ်နိုင်ပါစေကြောင်း မွေးနေ့ဆုမွန်ကောင်း တောင်းပေးလိုက်ပါသည်။</p>
+<p>ေလာကဒဏ္ မုန္တိုင္း လွိုင္းအလီလီကို အႀကိမ္ႀကိမ္ေက်ာ္လြန္ၿပီးတဲ့ မိသားစုရဲ႕ မာလိန်မှုူး <strong>"ဒဂုန္ေရာင္"</strong> ေမြးေန႕မွစ အရက္ေတြ ေငြလိုေပါပါေစ။ ေငြေတြေရလိုေပါပါေစ။ တ၍မလိုေသာလူ ျဖစ္နိုင္ပါေစေၾကာင္း ေမြးေန႕ဆုမြန္ေကာင္း ေတာင္းေပးလိုက္ပါသည္။</p>
 
 <section class="portrait" aria-hidden="true">
-  <!-- သင့်ဓာတ်ပုံ URL ထည့်ပါ -->
-  <img src="https://i.ibb.co/TDD8F4NM/IMG-20250813-052236-437.jpg" alt="​ဆျာဂျီးမျိုးနွယ်" />
+  <img src="https://i.ibb.co/TDD8F4NM/IMG-20250813-052236-437.jpg" alt="ဆရာ ဒဂုန္ေရာင္ ဓာတ္ပုံ" />
 </section>
 
-<div class="marquee-container" aria-label="ဆုတောင်း စာလုံးပြေး">
-  <div class="marquee" role="marquee" aria-live="off">
-<div class="marquee-text" id="marqueeText">
-      ဆုတောင်းများကို ပေးပို့လိုကြသောမိတ်ဆွေများ ~ &nbsp;&nbsp;
-      ကျေးဇူးအထူးတင်ပါသည် ~ &nbsp;&nbsp;
-      ဆရာ ဒဂုန်ရောင်ဆီ~ &nbsp;&nbsp;
-      ဆုတောင်းများကို ပေးပို့လိုကြသောမိတ်ဆွေများအတွက် လွယ်ကူစွာရေးခဲ့နိုင်ပါတယ်။ ~
-    </div>
+<div class="marquee-container" aria-label="ဆုေတာင္း စာလုံးေျပး">
+  <div class="marquee-text" id="marqueeText">
+      ဆုေတာင္းမ်ားကို ေပးပို႔လိုၾကေသာမိတ္ေဆြမ်ား ~ &nbsp;&nbsp;
+      ေက်းဇူးအထူးတင္ပါသည္ ~ &nbsp;&nbsp;
+      ဆရာ ဒဂုန္ေရာင္ဆီ~ &nbsp;&nbsp;
+      ဆုေတာင္းမ်ားကို ေပးပို႔လိုၾကေသာမိတ္ေဆြမ်ားအတြက္ လြယ္ကူစြာေရးခဲ့နိုင္ပါတယ္။ ~
   </div>
 </div>
 
-<section class="wish-panel" aria-label="ဆုမွန်တောင်းပေးရန်">
-  <label for="name">နာမည် (optional)</label>
-  <input type="text" id="name" placeholder="နာမည်ထည့်ပါ - မထည့်လည်းရသည်" />
-
-  <label for="wish">နမည် နှင့်ဆုမွန်တောင်း စာသား</label>
-  <textarea id="wish" placeholder="သင့်ဆုမွန်တောင်းကို ဒီမှာရေးပါ..."></textarea>
-
-  <button id="submitBtn" aria-label="Send wish">ပို့ရန်</button>
-
-  <p class="thankyou-msg" id="thankyou">သင့်ဆုတောင်းကို ဆရာဒဂုန်ရောင်ထံအရောက်ပို့လိုက်ပါပြီ။</p>
+<section class="contact-links" aria-label="ဆက္သြယ္ရန္ လင့္ခ္မ်ား">
+  <a href="https://t.e/dgraung" target="_blank" rel="noopener" class="btn">Telegram Chat</a>
+  <a href="https://m.me/DagonYaung" target="_blank" rel="noopener" class="btn">Messenger</a>
+  <a href="https://www.facebook.com/DagonYaung?mibextid=ZbWKwL" target="_blank" rel="noopener" class="btn">Facebook</a>
+  <a href="tel:+959799169226" class="btn">Call / SMS</a>
 </section>
-
-<script>
-  const submitBtn = document.getElementById('submitBtn');
-  const wishTextarea = document.getElementById('wish');
-  const nameInput = document.getElementById('name');
-  const thankyouMsg = document.getElementById('thankyou');
-
-  submitBtn.addEventListener('click', () => {
-  const wish = wishTextarea.value.trim();
-  const name = nameInput.value.trim() || "Anonymous";
-
-  if (!wish) {
-    alert('ဆုတောင်းကို ရိုက်ထည့်ပေးပါ');
-    return;
-  }
-
-  // SheetDB API ကို POST request ပို့ခြင်း
-  fetch('https://sheetdb.io/api/v1/jk2rx5qxh8h60', {
-    method: 'POST',
-    headers: {
-      'Content-Type': 'application/json',
-    },
-    body: JSON.stringify([
-      {
-        name: name,
-        wish: wish,
-      },
-    ]),
-  })
-  .then(response => response.json())
-  .then(data => {
-    console.log('Success:', data);
-    // UI ပြောင်းလဲခြင်း
-    wishTextarea.value = '';
-    nameInput.value = '';
-    thankyouMsg.style.display = 'block';
-    setTimeout(() => {
-      thankyouMsg.style.display = 'none';
-    }, 4000);
-  })
-  .catch((error) => {
-    console.error('Error:', error);
-  });
-</script>
 
 </body>
   </html>
