--- a/index.html
+++ b/index.html
@@ -1,124 +1,3 @@
-<!DOCTYPE html>
-<html lang="my">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>ေမြးေန႕ဂုဏ္ျပဳအမွတ္တရ</title>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Myanmar&display=swap" rel="stylesheet" />
-<style>
-  body {
-    font-family: 'Noto Sans Myanmar', serif;
-    margin: 2rem;
-    background: #000;
-    color: #FFD700;
-    line-height: 1.6;
-  }
-  h1 {
-    font-size: 2.4rem;
-    text-align: center;
-    margin-bottom: 0.25rem;
-  }
-  h2 {
-    font-size: 1.6rem;
-    text-align: center;
-    margin-bottom: 1.5rem;
-  }
-  strong {
-    font-weight: 900;
-  }
-  section.portrait {
-    text-align: center;
-    margin: 2rem 0;
-  }
-  section.portrait img {
-    width: 280px;
-    height: 280px;
-    border-radius: 20px;
-    border: 3px solid #FFD700;
-    box-shadow: 0 0 15px #FFD700;
-  }
-  .marquee-container {
-    overflow: hidden;
-    background: linear-gradient(90deg, #b39ddb, #7b1fa2, #b39ddb);
-    border-radius: 10px;
-    margin: 2rem 0;
-    padding: 0.4rem 0;
-    box-shadow: 0 4px 8px rgba(123,31,162,0.25);
-    border: 1px solid rgba(255,255,255,0.06);
-  }
-  .marquee-text {
-    display: inline-block;
-    white-space: nowrap;
-    padding-left: 100%;
-    animation: marqueeMove 18s linear infinite;
-    font-weight: 900;
-    font-size: 1.25rem;
-    color: #fff;
-    background: linear-gradient(90deg, #fff7d1 0%, #ffda44 25%, #ffae00 50%, #ffd700 75%, #fff7d1 100%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    text-shadow:
-      0 0 8px rgba(255,215,0,0.85),
-      0 0 18px rgba(255,200,0,0.6),
-      0 0 28px rgba(255,180,0,0.45);
-  }
-  @keyframes marqueeMove {
-    0%   { transform: translateX(0%); }
-    100% { transform: translateX(-100%); }
-  }
-  section.wish-panel {
-    margin-top: 2rem;
-  }
-  section.wish-panel label {
-    display: block;
-    margin-top: 1rem;
-    font-weight: 700;
-  }
-  section.wish-panel input[type="text"],
-  section.wish-panel textarea {
-    width: 100%;
-    padding: 0.6rem;
-    border-radius: 10px;
-    border: 2px solid #ab47bc;
-    background: rgba(255,255,255,0.06);
-    color: #FFD700;
-    font-family: 'Noto Sans Myanmar', serif;
-    font-size: 1rem;
-    resize: vertical;
-    box-shadow: inset 0 0 5px rgba(171,71,188,0.06);
-  }
-  section.wish-panel input[type="text"] {
-    height: 40px;
-  }
-  section.wish-panel textarea {
-    height: 100px;
-  }
-  section.wish-panel button {
-    margin-top: 1rem;
-    background-color: #FFD700;
-    color: #000;
-    font-weight: 700;
-    border: none;
-    padding: 0.6rem 1.2rem;
-    border-radius: 10px;
-    cursor: pointer;
-    font-size: 1rem;
-    box-shadow: 0 4px 10px rgba(255,215,0,0.4);
-    transition: background-color 0.2s ease;
-  }
-  section.wish-panel button:hover {
-    background-color: #ccac00;
-  }
-  .thankyou-msg {
-    margin-top: 1rem;
-    font-weight: 700;
-    text-align: center;
-    display: none;
-  }
-  /* Buttons for contact links */
-  .contact-links {
-    text-align: center;
     margin-top: 2rem;
   }
   .contact-links .btn {
@@ -141,29 +20,29 @@
 </head>
 <body>
 
-<h1>ဆရာ ဒဂုန္ေရာင္ ေမြးေန႕ဂုဏ္ျပဳ</h1>
-<h2>၁၃-၈-၂၀၂၅ ကမၻာေျမေပၚ ေရာက္ရွိျခင္း ႏွစ္ပတ္လည္ အထိမ္းအမွတ္</h2>
+<h1>ဆရာ ဒဂုန်ရောင် မွေးနေ့ဂုဏ်ပြု</h1>
+<h2>၁၃-၈-၂၀၂၅ ကမ်ဘာမြေပေါ် ရောက်ရှိခြင်း နှစ်ပတ်လည် အထိမ်းအမှတ်</h2>
 
-<p>ဆရာဒဂုန္ေရာင္ ...... အခုဆိုရင္ ရှင်သန်ရခြင်းရဲ့အဓိပ္ပါယ်ကို ပိုနက္ရွိုင္းစြာ ရွာေဖြရင္း ရယ္ေမာေပ်ာ္႐ႊင္စြာ ဘဝကိုျဖတ္သန္းနိုင္ေနပါၿပီ။</p>
+<p>ဆရာဒဂုန်ရောင် ...... အခုဆိုရင် ရှငျသနျရခွငျးရဲ့အဓိပ်ပါယျကို ပိုနက်ရှိုင်းစွာ ရှာဖွေရင်း ရယ်မောပျော်ရွှင်စွာ ဘဝကိုဖြတ်သန်းနိုင်နေပါပြီ။</p>
 
-<p>ဘဝမွာ ႀကဳံခဲ့သမွ် ဒုကၡဟူသမွ်၊ ဟာသလုပ္၊ ေျပာင္သေရာ္ကာ ကိုယ္တိုင္ အရက္နဲ႕ျမည္း၊ ဒုကၡဆိုတဲ့ေကာင္ကို အရက္နဲ႕အ႐ြဲ႕ ျပန္တိုက္ၿပီး</p>
+<p>ဘဝမွာ ကြုံခဲ့သမျှ ဒုက္ခဟူသမျှ၊ ဟာသလုပ်၊ ပြောင်သရော်ကာ ကိုယ်တိုင် အရက်နဲ့မြည်း၊ ဒုက္ခဆိုတဲ့ကောင်ကို အရက်နဲ့အရွဲ့ ပြန်တိုက်ပြီး</p>
 
-<p>ေလာကဒဏ္ မုန္တိုင္း လွိုင္းအလီလီကို အႀကိမ္ႀကိမ္ေက်ာ္လြန္ၿပီးတဲ့ မိသားစုရဲ႕ မာလိန်မှုူး <strong>"ဒဂုန္ေရာင္"</strong> ေမြးေန႕မွစ အရက္ေတြ ေငြလိုေပါပါေစ။ ေငြေတြေရလိုေပါပါေစ။ တ၍မလိုေသာလူ ျဖစ္နိုင္ပါေစေၾကာင္း ေမြးေန႕ဆုမြန္ေကာင္း ေတာင္းေပးလိုက္ပါသည္။</p>
+<p>လောကဒဏ် မုန်တိုင်း လှိုင်းအလီလီကို အကြိမ်ကြိမ်ကျော်လွန်ပြီးတဲ့ မိသားစုရဲ့ မာလိနမွှုူး <strong>"ဒဂုန်ရောင်"</strong> မွေးနေ့မှစ အရက်တွေ ငွေလိုပေါပါစေ။ ငွေတွေရေလိုပေါပါစေ။ တ၍မလိုသောလူ ဖြစ်နိုင်ပါစေကြောင်း မွေးနေ့ဆုမွန်ကောင်း တောင်းပေးလိုက်ပါသည်။</p>
 
 <section class="portrait" aria-hidden="true">
-  <img src="https://i.ibb.co/TDD8F4NM/IMG-20250813-052236-437.jpg" alt="ဆရာ ဒဂုန္ေရာင္ ဓာတ္ပုံ" />
+  <img src="https://i.ibb.co/TDD8F4NM/IMG-20250813-052236-437.jpg" alt="ဆရာ ဒဂုန်ရောင် ဓာတ္ပုံ" />
 </section>
 
-<div class="marquee-container" aria-label="ဆုေတာင္း စာလုံးေျပး">
+<div class="marquee-container" aria-label="ဆုတောင်း စာလုံးပြေး">
   <div class="marquee-text" id="marqueeText">
-      ဆုေတာင္းမ်ားကို ေပးပို႔လိုၾကေသာမိတ္ေဆြမ်ား ~ &nbsp;&nbsp;
-      ေက်းဇူးအထူးတင္ပါသည္ ~ &nbsp;&nbsp;
-      ဆရာ ဒဂုန္ေရာင္ဆီ~ &nbsp;&nbsp;
-      ဆုေတာင္းမ်ားကို ေပးပို႔လိုၾကေသာမိတ္ေဆြမ်ားအတြက္ လြယ္ကူစြာေရးခဲ့နိုင္ပါတယ္။ ~
+      ဆုတောင်းများကို ပေးပို့လိုကြသောမိတ်ဆွေများ ~ &nbsp;&nbsp;
+      ကျေးဇူးအထူးတင်ပါသည် ~ &nbsp;&nbsp;
+      ဆရာ ဒဂုန်ရောင်ဆီ~ &nbsp;&nbsp;
+      ဆုတောင်းများကို ပေးပို့လိုကြသောမိတ်ဆွေများအတွက် လွယ်ကူစွာရေးခဲ့နိုင်ပါတယ်။ ~
   </div>
 </div>
 
-<section class="contact-links" aria-label="ဆက္သြယ္ရန္ လင့္ခ္မ်ား">
+<section class="contact-links" aria-label="ဆက်သွယ်ရန် လင့်ခ်များ">
   <a href="https://t.e/dgraung" target="_blank" rel="noopener" class="btn">Telegram Chat</a>
   <a href="https://m.me/DagonYaung" target="_blank" rel="noopener" class="btn">Messenger</a>
   <a href="https://www.facebook.com/DagonYaung?mibextid=ZbWKwL" target="_blank" rel="noopener" class="btn">Facebook</a>
@@ -172,3 +51,6 @@
 
 </body>
   </html>
+
+
+
